--- a/clusters/omv/apps/30-system.yaml
+++ b/clusters/omv/apps/30-system.yaml
@@ -1,12 +1,12 @@
 applications:
 
-  system-upgrade-controller:
-    annotations:
-      argocd.argoproj.io/sync-wave: "30"
-    destination:
-      namespace: system-upgrade
-    source:
-      path: components/system-upgrade/system-upgrade-controller
+  # system-upgrade-controller:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "30"
+  #   destination:
+  #     namespace: system-upgrade
+  #   source:
+  #     path: components/system-upgrade/system-upgrade-controller
 
   system-upgrade-k3s:
     annotations:
