--- a/components/cattle-system/rancher/helm-chart.yaml
+++ b/components/cattle-system/rancher/helm-chart.yaml
@@ -21,4 +21,4 @@ spec:
     agentTLSMode: "system-store"
     extraEnv:
       - name: CATTLE_FEATURES
-        value: "fleet=false,managed-system-upgrade-controller=false"
+        value: "fleet=false"
