(fix): move to two deploymets

--- a/components/default/tripnibble/http-route.yaml
+++ b/components/default/tripnibble/http-route.yaml
@@ -20,5 +20,5 @@ spec:
     - "tripnibble.${CLUSTER_DOMAIN}"
   rules:
     - backendRefs:
-        - name: tripnibble
+        - name: tripnibble-chainlit
           port: 7001
