--- a/components/default/gitea/values.yaml
+++ b/components/default/gitea/values.yaml
@@ -40,9 +40,9 @@ controllers:
         resources:
           requests:
             cpu: 10m
-            memory: 300Mi
+            memory: 500Mi
           limits:
-            memory: 600Mi
+            memory: 2Gi
 service:
   gitea:
     controller: *name
