--- a/components/default/openclaw/http-route.yaml
+++ b/components/default/openclaw/http-route.yaml
@@ -21,5 +21,5 @@ spec:
   hostnames: ["openclaw.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: openclaw-app
+        - name: openclaw
           port: 18789
