--- a/components/default/openclaw/externalsecret.yaml
+++ b/components/default/openclaw/externalsecret.yaml
@@ -15,6 +15,7 @@ spec:
       data:
         # Environment variables for skills
         GITHUB_TOKEN: "{{ .GITHUB_TOKEN }}"
+        OPENCLAW_GATEWAY_TOKEN: "{{.OPENCLAW_GATEWAY_TOKEN}}"
         # GOOGLE_CLIENT_ID: "{{ .GOOGLE_CLIENT_ID }}"
         # GOOGLE_CLIENT_SECRET: "{{ .GOOGLE_CLIENT_SECRET }}"
   dataFrom:
