--- a/components/default/openclaw/http-route.yaml
+++ b/components/default/openclaw/http-route.yaml
@@ -10,9 +10,8 @@ metadata:
     gethomepage.dev/href: "https://openclaw.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
-    gethomepage.dev/icon: https://raw.githubusercontent.com/openclaw/openclaw/main/assets/icon.png
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/openclaw.svg
     gethomepage.dev/name: OpenClaw
-    gethomepage.dev/description: "Personal AI Assistant"
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
