--- a/components/default/openclaw/values.yaml
+++ b/components/default/openclaw/values.yaml
@@ -14,19 +14,49 @@ controllers:
         image:
           repository: ghcr.io/openclaw/openclaw
           tag: 2026.2.12
+        command:
+          - node
+          - dist/index.js
+          - gateway
+          - --bind
+          - lan
+          - --port
+          - "18789"
         env:
           TZ: "America/New_York"
+          HOME: /home/node
+          TERM: xterm-256color
+          PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/node/.openclaw/bin/bin"
+          npm_config_prefix: home/node/.openclaw/npm
           # Skills environment variables from secret
         envFrom:
           - secretRef:
               name: openclaw-secret
         probes:
           liveness:
-            enabled: false
+            enabled: true
+            custom: true
+            spec:
+              tcpSocket:
+                port: 18789
+              initialDelaySeconds: 30
+              periodSeconds: 30
           readiness:
-            enabled: false
+            enabled: true
+            custom: true
+            spec:
+              tcpSocket:
+                port: 18789
+              initialDelaySeconds: 10
+              periodSeconds: 10
           startup:
-            enabled: false
+            enabled: true
+            custom: true
+            spec:
+              tcpSocket:
+                port: 18789
+              periodSeconds: 5
+              failureThreshold: 30
         resources:
           requests:
             cpu: 100m
@@ -46,7 +76,7 @@ persistence:
     enabled: true
     existingClaim: openclaw
     globalMounts:
-      - path: /home/openclaw/.openclaw
+      - path: /home/node/.openclaw
   # Mount config.json from secret
   config:
     enabled: true
