--- a/components/default/openclaw/externalsecret.yaml
+++ b/components/default/openclaw/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       data:
         # Environment variables for skills
         GITHUB_TOKEN: "{{ .GITHUB_TOKEN }}"
-        OPENCLAW_GATEWAY_TOKEN: "{{.OPENCLAW_GATEWAY_TOKEN}}"
+        OPENCLAW_GATEWAY_TOKEN: "{{ .OPENCLAW_GATEWAY_TOKEN }}"
         # GOOGLE_CLIENT_ID: "{{ .GOOGLE_CLIENT_ID }}"
         # GOOGLE_CLIENT_SECRET: "{{ .GOOGLE_CLIENT_SECRET }}"
   dataFrom:
@@ -36,26 +36,37 @@ spec:
     template:
       engineVersion: v2
       data:
-        # OpenClaw config.json - mounted as file
-        config.json: |
+        # OpenClaw openclaw.json - mounted as file
+        openclaw.json: |
           {
-            "providers": {
-              "ollama": {
-                "baseUrl": "http://{{ .OLLAMA_URL }}:11434",
-                "model": "qwen2.5-coder:7b",
-                "enabled": true
+            "agents": {
+              "defaults": {
+                "model": {
+                  "primary": "ollama/qwen2.5-coder:7b"
+                },
+                "memory": {
+                  "enabled": true
+                },
+                "heartbeat": {
+                  "enabled": false
+                },
+                "workspace": "/home/node/.openclaw/workspace"
               }
             },
-            "defaultProvider": "ollama",
+            "models": {
+              "providers": {
+                "ollama": {
+                  "baseUrl": "http://{{ .OLLAMA_URL }}:11434"
+                }
+              }
+            },
             "gateway": {
               "port": 18789,
-              "host": "0.0.0.0"
-            },
-            "memory": {
-              "enabled": true
-            },
-            "heartbeat": {
-              "enabled": false
+              "bind": "network",
+              "auth": {
+                "token": "{{ .OPENCLAW_GATEWAY_TOKEN }}"
+              },
+              "allowInsecureAuth": true
             }
           }
   dataFrom:
