--- a/components/ai/milvusdb/kustomization.yaml
+++ b/components/ai/milvusdb/kustomization.yaml
@@ -1,11 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: ai
 helmCharts:
   - name: milvus
     releaseName: milvusdb
-    namespace: default
+    namespace: ai
     repo: https://zilliztech.github.io/milvus-helm/
     version: "5.0.14"
     valuesFile: values.yaml
