--- a/components/ai/openclaw/kustomization.yaml
+++ b/components/ai/openclaw/kustomization.yaml
@@ -1,14 +1,15 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ai
 resources:
-  - ./external-secret.yaml
+  - ./externalsecret.yaml
   - ./http-route.yaml
-
+components:
+  - ../../volsync-system/volsync-replication
 helmCharts:
   - name: app-template
-    releaseName: tripnibble
-    namespace: default
+    releaseName: openclaw
+    namespace: ai
     repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.6.2"
     valuesFile: values.yaml
