--- a/components/ai/openclaw/values.yaml
+++ b/components/ai/openclaw/values.yaml
@@ -3,6 +3,12 @@ controllers:
   app:
     annotations:
       reloader.stakater.com/auto: "true"
+    pod:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
     initContainers:
       install-tools:
         image:
