(fix): security audit

--- a/components/ai/openclaw/externalsecret.yaml
+++ b/components/ai/openclaw/externalsecret.yaml
@@ -69,11 +69,16 @@ spec:
               "port": 18789,
               "bind": "lan",
               "auth": {
-                "token": "{{ .OPENCLAW_GATEWAY_TOKEN }}"
+                "token": "{{ .OPENCLAW_GATEWAY_TOKEN }}",
+                "rateLimit": {
+                  "maxAttempts": 10,
+                  "windowMs": 60000,
+                  "lockoutMs": 300000
+                }
               },
               "controlUi": {
                 "enabled": true,
-                "allowInsecureAuth": true
+                "allowInsecureAuth": false
               }
             }
           }
