(fix): add tructes proxies

--- a/components/ai/openclaw/externalsecret.yaml
+++ b/components/ai/openclaw/externalsecret.yaml
@@ -68,6 +68,7 @@ spec:
             "gateway": {
               "port": 18789,
               "bind": "lan",
+              "trustedProxies": ["10.69.0.0/16"],
               "auth": {
                 "token": "{{ .OPENCLAW_GATEWAY_TOKEN }}",
                 "rateLimit": {
