--- a/components/ai/openclaw/externalsecret.yaml
+++ b/components/ai/openclaw/externalsecret.yaml
@@ -79,7 +79,7 @@ spec:
               },
               "controlUi": {
                 "enabled": true,
-                "allowInsecureAuth": false
+                "allowInsecureAuth": true
               }
             }
           }
