refactor(notifications): migrate from Pushover to Slack for alert notifications across multiple components

--- a/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
@@ -18,8 +18,6 @@ spec:
   dataFrom:
     - extract:
         key: omv
-    - extract:
-        key: Pushover
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
@@ -35,10 +33,10 @@ spec:
     template:
       engineVersion: v2
       data:
-        pushover-token: "{{.ARGOCD_API_KEY}}"
+        slack-token: "{{.ALERTMANAGER_BOT_TOKEN}}"
   dataFrom:
     - extract:
         conversionStrategy: Default
         decodingStrategy: None
-        key: Pushover
+        key: Slack
         metadataPolicy: None
