--- a/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
@@ -28,3 +28,25 @@ spec:
         key: cloudflare
     - extract:
         key: synology-homepage
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: argocd-notifications-secret
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword-connect
+  target:
+    name: argocd-notifications-secret
+    creationPolicy: Merge
+    template:
+      engineVersion: v2
+      data:
+        slack-token: "{{.ALERTMANAGER_BOT_TOKEN}}"
+  dataFrom:
+    - extract:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: Slack
+        metadataPolicy: None
