--- a/components/observability/kube-prometheus-stack/externalsecret.yaml
+++ b/components/observability/kube-prometheus-stack/externalsecret.yaml
@@ -14,8 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        ALERTMANAGER_PUSHOVER_TOKEN: "{{ .api_key }}"
-        PUSHOVER_USER_KEY: "{{ .user_key }}"
+        SLACK_WEBHOOK_URL: "{{ .WEBHOOK_URL }}"
   dataFrom:
     - extract:
-        key: Pushover
+        key: Slack
