feat(notifications): add Slack notification for application comparison errors and update Cilium tproxy setting

--- a/clusters/omv/apps/common-values.yaml
+++ b/clusters/omv/apps/common-values.yaml
@@ -4,6 +4,7 @@ default:
       notifications.argoproj.io/subscribe.on-sync-failed.slack: "#homelab-alerts"
       notifications.argoproj.io/subscribe.on-sync-status-unknown.slack: "#homelab-alerts"
       notifications.argoproj.io/subscribe.on-health-degraded.slack: "#homelab-alerts"
+      notifications.argoproj.io/subscribe.on-comparison-error.slack: "#homelab-alerts"
     enabled: true
     enableAutoSync: true
     autoSyncPrune: true
