--- a/components/ai/tripnibble/external-secret.yaml
+++ b/components/ai/tripnibble/external-secret.yaml
@@ -2,13 +2,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: tripnibble-registry
+  name: gitea-registry
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: tripnibble-registry-secret
+    name: gitea-registry-secret
     template:
       engineVersion: v2
       type: kubernetes.io/dockerconfigjson
@@ -49,3 +49,5 @@ spec:
   dataFrom:
     - extract:
         key: tripnibble
+    - extract:
+        key: inference-hub
