--- a/components/ai/mo/external-secret.yaml
+++ b/components/ai/mo/external-secret.yaml
@@ -19,7 +19,7 @@ spec:
         SLACK_BOT_TOKEN: "{{.MO_BOT_TOKEN}}"
         SLACK_APP_TOKEN: "{{.MO_APP_TOKEN}}"
         GH_TOKEN: "{{.GITHUB_TOKEN}}"
-        NEXTCLOUD_URL: "{{.CAL_DEV_URL}}"
+        NEXTCLOUD_URL: "{{.CAL_DAV_URL}}"
         NEXTCLOUD_USER: "{{.NC_USER}}"
         NEXTCLOUD_PASSWORD: "{{.NC_PASSWORD}}"
         DIGEST_CHANNEL_ID: "{{.DIGEST_CHANNEL_ID}}"
