(fix): add image pull policy always key

--- a/components/ai/mo/values.yaml
+++ b/components/ai/mo/values.yaml
@@ -18,7 +18,7 @@ controllers:
         image:
           repository: gitea.omv.${CLUSTER_DOMAIN}/vpogu/mo-agent
           tag: latest
-        imagePullPolicy: Always
+          pullPolicy: Always
         env:
           TZ: America/New_York
         envFrom: *envFrom
