--- a/components/ai/mo/external-secret.yaml
+++ b/components/ai/mo/external-secret.yaml
@@ -18,7 +18,7 @@ spec:
         EMBEDDING_MODEL: "{{.EMBEDDING_MODEL}}"
         SLACK_BOT_TOKEN: "{{.MO_BOT_TOKEN}}"
         SLACK_APP_TOKEN: "{{.MO_APP_TOKEN}}"
-        GH_TOKEN: "{{.GITHUB_TOKEN}}"
+        GH_TOKEN: "{{.K8S_TOKEN}}"
         NEXTCLOUD_URL: "{{.CAL_DAV_URL}}"
         NEXTCLOUD_USER: "{{.NC_USER}}"
         NEXTCLOUD_PASSWORD: "{{.NC_PASSWORD}}"
@@ -43,3 +43,5 @@ spec:
         key: Slack
     - extract:
         key: nextcloud
+    - extract:
+        key: Github
