--- a/components/argo-system/kubechecks/externalsecret.yaml
+++ b/components/argo-system/kubechecks/externalsecret.yaml
@@ -13,11 +13,16 @@ spec:
     template:
       engineVersion: v2
       data:
-        KUBECHECKS_VCS_TOKEN: "{{ .GH_TOKEN }}"
+        KUBECHECKS_VCS_TOKEN: "{{ .K8S_TOKEN }}"
         KUBECHECKS_ARGOCD_API_TOKEN: "{{.ARGOCD_OMV_TOKEN}}"
   dataFrom:
     - extract:
         conversionStrategy: Default
         decodingStrategy: None
         key: kubechecks
+        metadataPolicy: None
+    - extract:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: Github
         metadataPolicy: None
