--- a/components/ai/mo/values.yaml
+++ b/components/ai/mo/values.yaml
@@ -16,12 +16,12 @@ controllers:
       main:
         image:
           repository: gitea.omv.a113.casa/vpogu/mo-agent
-          tag: e257ac0
+          tag: 2026-02-25-201a471
           pullPolicy: Always
         env:
           TZ: America/New_York
-          DIGEST_HOUR: "13"
-          DIGEST_MINUTE: "15"
+          DIGEST_HOUR: "14"
+          DIGEST_MINUTE: "00"
         envFrom: *envFrom
         resources:
           requests:
