(fix): update new envs

--- a/components/ai/mo/external-secret.yaml
+++ b/components/ai/mo/external-secret.yaml
@@ -23,6 +23,10 @@ spec:
         NEXTCLOUD_USER: "{{.NC_USER}}"
         NEXTCLOUD_PASSWORD: "{{.NC_PASSWORD}}"
         DIGEST_CHANNEL_ID: "{{.DIGEST_CHANNEL_ID}}"
+        GITEA_TOKEN: "{{.MO_TOKEN}}"
+        GITEA_URL: "https://gitea.omv.${CLUSTER_DOMAIN}"
+        ALERTS_CHANNEL_ID: "{{.ALERTS_CHANNEL_ID}}"
+        ALERT_NOTIFY_USER_ID: "{{.ALERT_NOTIFY_USER_ID}}"
 
         DATABASE_URL: |-
           postgres://{{ .MO_POSTGRES_USER }}:{{ .MO_POSTGRES_PASS }}@postgres17-rw.default.svc.cluster.local/mo
@@ -45,3 +49,5 @@ spec:
         key: nextcloud
     - extract:
         key: Github
+    - extract:
+        key: gitea
