--- a/components/default/gitea/external-secret.yaml
+++ b/components/default/gitea/external-secret.yaml
@@ -22,6 +22,7 @@ spec:
         GITEA__database__NAME: "gitea"
         GITEA__database__USER: "{{ .POSTGRES_USER }}"
         GITEA__database__PASSWD: "{{ .POSTGRES_PASS }}"
+        GITEA__webhook__ALLOWED_HOST_LIST: "{{.GITEA__webhook__ALLOWED_HOST_LIST}}"
         username: "{{.username}}"
         password: "{{.password}}"
         email: "gitea@local.domain"
