(fix): digest minutes update and add secret

--- a/components/ai/mo/external-secret.yaml
+++ b/components/ai/mo/external-secret.yaml
@@ -26,7 +26,9 @@ spec:
         GITEA_TOKEN: "{{.MO_TOKEN}}"
         GITEA_URL: "https://gitea.omv.${CLUSTER_DOMAIN}"
         ALERTS_CHANNEL_ID: "{{.ALERTS_CHANNEL_ID}}"
-        ALERT_NOTIFY_USER_ID: "{{.ALERT_NOTIFY_USER_ID}}"
+        NETWORK_AUDIT_CHANNEL_ID: "{{.DIGEST_CHANNEL_ID}}"
+        UNIFI_HOST: "{{.UNIFI_HOST}}"
+        UNIFI_API_KEY: "{{.MO_AGENT_API_KEY}}"
 
         DATABASE_URL: |-
           postgres://{{ .MO_POSTGRES_USER }}:{{ .MO_POSTGRES_PASS }}@postgres17-rw.default.svc.cluster.local/mo
@@ -51,3 +53,5 @@ spec:
         key: Github
     - extract:
         key: gitea
+    - extract:
+        key: unifi
