(fix): update external secret variables for LITELLM integration
Replaced INFERENCE_HUB_MODEL, INFERENCE_HUB_BASE_URL, and API_KEY with LITELLM_MODEL, LITELLM_BASE_URL, and LITELLM_MASTER_KEY respectively in external-secret.yaml to align with new configuration requirements.

--- a/components/ai/mo/external-secret.yaml
+++ b/components/ai/mo/external-secret.yaml
@@ -12,9 +12,9 @@ spec:
     template:
       engineVersion: v2
       data:
-        INFERENCE_HUB_MODEL: "{{ .INFERENCE_HUB_MODEL }}"
-        INFERENCE_HUB_BASE_URL: "{{ .INFERENCE_HUB_BASE_URL }}"
-        API_KEY: "{{ .API_KEY }}"
+        INFERENCE_HUB_MODEL: "{{ .LITELLM_MODEL }}"
+        INFERENCE_HUB_BASE_URL: "{{ .LITELLM_BASE_URL }}"
+        API_KEY: "{{ .LITELLM_MASTER_KEY }}"
         EMBEDDING_MODEL: "{{.EMBEDDING_MODEL}}"
         SLACK_BOT_TOKEN: "{{.MO_BOT_TOKEN}}"
         SLACK_APP_TOKEN: "{{.MO_APP_TOKEN}}"
