--- a/components/argo-system/argocd-image-updater/values.yaml
+++ b/components/argo-system/argocd-image-updater/values.yaml
@@ -10,8 +10,8 @@ config:
     insecure: true
     plaintext: true
 metrics:
-  enabled: true
+  enabled: false
   serviceMonitor:
-    enabled: true
+    enabled: false
     additionalLabels:
       release: kube-prometheus-stack
