--- a/components/default/jellyseerr/values.yaml
+++ b/components/default/jellyseerr/values.yaml
@@ -15,8 +15,8 @@ controllers:
     containers:
       app:
         image:
-          repository: ghcr.io/fallenbagel/jellyseerr
-          tag: 2.7.3@sha256:9cc9e9ee6cd5cf5a23feb45c37742ba34cfd6314d81d259cddb373a97ac92cdd
+          repository: ghcr.io/seerr-team/seerr
+          tag: v3.1.0
         env:
           TZ: America/New_York
           LOG_LEVEL: "info"
